--- a/Ficheros_prueba/ua.dist
+++ b/Ficheros_prueba/ua.dist
@@ -1,3 +1,5 @@
+zafi23@hotmail.com
+0.5
 145
 hola;hola;Departamento de Estadística e Investigación Operativa;hola;hola;hola;hola
 departamento de estadistica e investigacion operativa
